--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,14 +5,14 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#dadada"
     android:gravity="center"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.github.chizoba.firebasecloudfunctions.MainActivity"
-    android:background="#dadada">
+    tools:context="com.github.chizoba.firebasecloudfunctions.MainActivity">
 
 
     <android.support.v7.widget.CardView
@@ -90,6 +90,5 @@
             </LinearLayout>
         </LinearLayout>
     </android.support.v7.widget.CardView>
-
 
 </LinearLayout>
