Major code changes Migrate to AndroidX Update notification implementation for Android 8 and above Update dependencies Update example instrumented test code base

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
     tools:context="com.github.chizoba.firebasecloudfunctions.MainActivity">
 
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -34,7 +34,7 @@
                 android:textSize="14sp"
                 android:textStyle="bold" />
 
-            <android.support.design.widget.TextInputLayout
+            <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/data_title_input_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -47,9 +47,9 @@
                     android:imeOptions="actionNext"
                     android:hint="Title" />
 
-            </android.support.design.widget.TextInputLayout>
+            </com.google.android.material.textfield.TextInputLayout>
 
-            <android.support.design.widget.TextInputLayout
+            <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/data_message_input_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -62,7 +62,7 @@
                     android:inputType="textMultiLine"
                     android:hint="Message" />
 
-            </android.support.design.widget.TextInputLayout>
+            </com.google.android.material.textfield.TextInputLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -93,6 +93,6 @@
 
             </LinearLayout>
         </LinearLayout>
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
 </LinearLayout>
